2021-01-11  Lauro Moura  <lmoura@igalia.com>

        [WPE] Gardening API test crash

        Unreviewed test gardening.

        * TestWebKitAPI/glib/TestExpectations.json:

2021-01-11  Sihui Liu  <sihui_liu@appe.com>

        Make SpeechRecognition permission error more informative
        https://bugs.webkit.org/show_bug.cgi?id=220436

        Reviewed by Youenn Fablet.

        * TestWebKitAPI/Tests/WebKitCocoa/SpeechRecognition.mm:
        (TestWebKitAPI::TEST):

2021-01-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        ASSERTION FAILED: !event || event.type == NSEventTypeLeftMouseDown || event.type == NSEventTypeRightMouseDown || event.type == NSEventTypeOtherMouseDown
        https://bugs.webkit.org/show_bug.cgi?id=220520
        <rdar://problem/73007898>

        Reviewed by Tim Horton.

        Fix the assertion by synthesizing a "mouse down" event instead of "mouse entered".

        * TestWebKitAPI/Tests/mac/AcceptsFirstMouse.mm:
        (TestWebKitAPI::TEST):

2021-01-11  BJ Burg  <bburg@apple.com>

        Unreviewed, update my contributor information.

        * Scripts/webkitpy/common/config/contributors.json:

2021-01-11  Youenn Fablet  <youenn@apple.com>

        WebProcessPool::establishWorkerContextConnectionToNetworkProcess should make sure to remove the selected process from the cache
        https://bugs.webkit.org/show_bug.cgi?id=220503

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:

2021-01-11  Aakash Jain  <aakash_jain@apple.com>

        [build.webkit.org] Stop using deprecated addFactoryArguments method
        https://bugs.webkit.org/show_bug.cgi?id=220513

        Reviewed by Jonathan Bedard.

        * CISupport/build-webkit-org/steps.py:

2021-01-11  Aakash Jain  <aakash_jain@apple.com>

        [ews] Add python 3 support - part 1
        https://bugs.webkit.org/show_bug.cgi?id=220510

        Reviewed by Jonathan Bedard.

        * CISupport/ews-build/email_unittest.py: