@@ -1,3 +1,13 @@
+2021-01-12  Aakash Jain  <aakash_jain@apple.com>
+
+        [build.webkit.org] Update force schedulers as per new buildbot
+        https://bugs.webkit.org/show_bug.cgi?id=220544
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/build-webkit-org/loadConfig.py:
+        (loadBuilderConfig):
+
 2021-01-11  Lauro Moura  <lmoura@igalia.com>
 
         [WPE] Gardening API test crash
